--- a/wp-content/themes/v2-1/style.css
+++ b/wp-content/themes/v2-1/style.css
@@ -12,7 +12,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 
 /* Google Fonts Import
 --------------------------------------------- */
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold|Droid+Serif:regular,italic,bold,bolditalic&subset=latin);
+/* @import url(http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold|Droid+Serif:regular,italic,bold,bolditalic&subset=latin); */
 
 /* Reset
 --------------------------------------------- */
